--- a/search bar/css/search.css
+++ b/search bar/css/search.css
@@ -1,17 +1,25 @@
+a {
+  text-decoration: none;
+  color: #333;
+}
+a:hover {
+  text-decoration: none;
+  color: #666;
+}
 .search-section {
   background: #444;
 }
 .main-search {
   padding: 40px 0px;
 }
-.main-search select, .main-search input, .main-search button {
+.main-search input, .main-search button {
   float: left;
   border: none;
 }
-.main-search select:focus, .main-search input:focus, .main-search button:focus {
+.main-search input:focus, .main-search button:focus {
   outline: none;
 }
-.main-search select {
+.main-search .dropdown {
   width: 25%;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -23,7 +31,7 @@
   border-right: 1px solid #aaa;
   color: #777;
 }
-.main-search input {
+.main-search .search-input {
   width: 60%;
   padding: 14px 20px;
 }
@@ -35,8 +43,64 @@
   color: #fff;
   padding: 12px;
 }
+
+/* location popup */
+.locaton-box {
+  width: 25%;
+}
+.enter-city {
+  background: #ddd;
+  padding: 20px 10px;
+  position: relative;
+  margin-top: 10px;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+}
+.enter-city input {
+  width: 100%;
+  float: none;
+  padding: 5px 10px;
+  font-size: 10px;
+  border: 1px solid #bbb;
+}
+.enter-city span {
+  display: inline-block;
+  background: #fff;
+  font-size: 11px;
+  border: 1px solid maroon;
+  padding: 2px;
+  border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  left: calc(50% - 10px);
+  bottom: -10px;
+}
+.enter-city .fa {
+  position: absolute;
+  font-size: 35px;
+  top: -23px;
+  color: #ddd;
+  right: 10px;
+}
+.select-city {
+  background: #fff;
+  padding: 30px 10px 10px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+.select-city  p:first-child {
+  color: maroon;
+}
+.select-city p a {
+  font-size: 11px;
+}
+.select-city p {
+  line-height: 1;
+}
+
+
 @media only screen and (max-width: 768px) {
-  .main-search select, .main-search input, .main-search button {
+  .main-search input, .main-search button {
     width: 100%;
   }
   .main-search input {
